[package]
name = "tiered-sub"
version = "1.1"
[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.4"

[dev-dependencies]
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
